node-app-k8s/jenkins-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-app-svc
  namespace: jenkins-app
spec:
  selector: 
    app: jenkins-app
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
