node-app-k8s/jenkins-app-ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: jenkins-app-ingress
  namespace: jenkins-app
spec:
  defaultBackend:
    service:
      name: jenkins-app-svc
      port:
        number: 3000
status:
  loadBalancer: {}
